@@ -138,7 +138,7 @@ def toPinDef(pin):
 def codeOutDevice(device):
   if device in board.devices:
     codeOut("#define "+device+"_PININDEX "+toPinDef(board.devices[device]["pin"]))
-    if device=="BTN1":
+    if device[0:3]=="BTN":
       codeOut("#define "+device+"_ONSTATE "+("0" if "inverted" in board.devices[device] else "1"))
       if "pinstate" in board.devices[device]:
         codeOut("#define "+device+"_PINSTATE JSHPINSTATE_GPIO_"+board.devices[device]["pinstate"]);
